login + listado alumnos + alta alumnos con EF

--- a/TP1/Web.config
+++ b/TP1/Web.config
@@ -11,10 +11,14 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-TP1-20181009202603;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-TP1-20181009202603.mdf" providerName="System.Data.SqlClient" />
     <add name="TP1ConnectionString" connectionString="Data Source=localhost;Initial Catalog=TP1;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TP1Entities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TP1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+ 
+  <add name="TP1Entities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TP1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5.2" />
     <pages>
       <namespaces>
