--- a/TP1/TP1.csproj
+++ b/TP1/TP1.csproj
@@ -227,6 +227,7 @@
     <Content Include="Scripts\js\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\js\bootstrap.js.map" />
     <Content Include="Scripts\js\bootstrap.min.js.map" />
+    <Content Include="Forms\Alumno_editar.aspx" />
     <EntityDeploy Include="Model\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
@@ -355,6 +356,13 @@
     </Compile>
     <Compile Include="Forms\Alumno_lista.aspx.designer.cs">
       <DependentUpon>Alumno_lista.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Alumno_editar.aspx.cs">
+      <DependentUpon>Alumno_editar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Forms\Alumno_editar.aspx.designer.cs">
+      <DependentUpon>Alumno_editar.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
